--- a/WEB/WEB/Views/QuanLyTaiKhoan/ChinhSuaTaiKhoan.cshtml
+++ b/WEB/WEB/Views/QuanLyTaiKhoan/ChinhSuaTaiKhoan.cshtml
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Email)
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", type = "email" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
