--- a/WEB/WEB/Views/QuanLyTaiKhoan/TaoTaiKhoan.cshtml
+++ b/WEB/WEB/Views/QuanLyTaiKhoan/TaoTaiKhoan.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Tạo Tài Khoản";
     Layout = "~/Views/Shared/Backend.cshtml";
 }
- 
+
 
 
 @using (Html.BeginForm())
@@ -28,7 +28,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Email)
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Email , new { htmlAttributes = new { @class = "form-control", type = "email" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
@@ -66,5 +66,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
 
+  
+}
